Move \char_generate:nn, \char_set_active_eq:NN, etc., to stable
This is a requirement if we are going to drop \tl_to_lowercase:n,
etc.

--- a/l3kernel/l3msg.dtx
+++ b/l3kernel/l3msg.dtx
@@ -1832,6 +1832,16 @@
     #2~arguments.~
     TeX~allows~between~0~and~9~arguments~for~a~single~function.
   }
+\@@_kernel_new:nnn { kernel } { char-active }
+  { Cannot~generate~active~chars. }
+\@@_kernel_new:nnn { kernel } { char-invalid-catcode }
+  { Invalid~catcode~for~char~generation. }
+\@@_kernel_new:nnn { kernel } { char-null-space }
+  { Cannot~generate~null~char~as~a~space. }
+\@@_kernel_new:nnn { kernel } { char-out-of-range }
+  { Charcode~requested~out~of~engine~range. }
+\@@_kernel_new:nnn { kernel } { char-space }
+  { Cannot~generate~space~chars. }
 \@@_kernel_new:nnnn { kernel } { command-already-defined }
   { Control~sequence~#1~already~defined. }
   {
