One \tex_lowercase:D => \char_generate:nn

--- a/l3kernel/l3msg.dtx
+++ b/l3kernel/l3msg.dtx
@@ -2015,9 +2015,8 @@
 %   (with category code $7$) and keep tokens until that space character,
 %   dropping everything else until \cs{q_stop}. The \cs{exp_end:} prevents
 %   losing braces around the user-inserted text if any, and stops the
-%   expansion of \cs{exp:w}.  One group is used to keep the settings
-%   for \tn{lowercase} local and the other one is used to prevent
-%   |\LaTeX3~error:| from being equal to \cs{scan_stop:}.
+%   expansion of \cs{exp:w}.  The group is used to prevent
+%   |\LaTeX3~error:| from being globally equal to \cs{scan_stop:}.
 %    \begin{macrocode}
 \group_begin:
 \cs_set_protected:Npn \@@_tmp:w #1#2
@@ -2034,11 +2033,9 @@
       }
     \cs_new:Npn \@@_expandable_error:w ##1 #1 ##2 #1 {##1}
   }
-\group_begin:
-\char_set_catcode_math_superscript:N \^
-\char_set_lccode:nn { `^ } { `\  }
-\tex_lowercase:D
-  { \group_end: \exp_args:NNc \@@_tmp:w ^ } { LaTeX3~error: }
+\exp_args:NNnx \exp_args:Nx \@@_tmp:w
+  { \char_generate:nn { `\  } { 7 } }
+  { \exp_not:c { LaTeX3~error: } }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
