Remove a use of \tex_lowercase:n

--- a/l3kernel/l3tl.dtx
+++ b/l3kernel/l3tl.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-%% File: l3tl.dtx Copyright (C) 1990-2015 The LaTeX3 Project
+%% File: l3tl.dtx Copyright (C) 1990-2016 The LaTeX3 Project
 %%
 %% It may be distributed and/or modified under the conditions of the
 %% LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -1604,65 +1604,66 @@
 %   sequence of such characters: a single space with catcode $10$ and
 %   character code $32$.
 %    \begin{macrocode}
-\group_begin:
-  \tex_catcode:D `\^^@ = 12 \scan_stop:
-  \cs_new_protected:Npn \@@_set_rescan:n #1
-    {
-      \int_compare:nNnTF \tex_newlinechar:D < \c_zero
-        { \use_ii:nn }
-        {
-          \char_set_lccode:nn { 0 } { \tex_newlinechar:D }
-          \tex_lowercase:D { \@@_set_rescan:NnTF ^^@ } {#1}
-        }
-          { \@@_set_rescan_multi:n }
-          { \@@_set_rescan_single:nn { ' } }
-      {#1}
-    }
-  \cs_new_protected:Npn \@@_set_rescan:NnTF #1#2
-    { \tl_if_in:nnTF {#2} {#1} }
-  \cs_new_protected:Npn \@@_set_rescan_single:nn #1
-    {
-      \int_compare:nNnTF
-        { \char_value_catcode:n { `#1 } / \c_three } = \c_four
-        { \@@_set_rescan_single_aux:nn {#1} }
-        {
-          \int_compare:nNnTF { `#1 } < { `\~ }
-            {
-              \char_set_lccode:nn { 0 } { `#1 + 1 }
-              \tex_lowercase:D { \@@_set_rescan_single:nn { ^^@ } }
-            }
-            { \@@_set_rescan_single_aux:nn { } }
-        }
-    }
-  \cs_new_protected:Npn \@@_set_rescan_single_aux:nn #1#2
-    {
-      \tex_endlinechar:D \c_minus_one
-      \use:x
-        {
-          \exp_not:N \use:n
-            {
-              \exp_not:n { \cs_set:Npn \@@_rescan:w ##1 }
-              \exp_after:wN \@@_rescan:w
-              \exp_after:wN \prg_do_nothing:
-              \etex_scantokens:D {#1}
-            }
-          \c_@@_rescan_marker_tl
-        }
-        { \exp_not:o {##1} }
-      \tl_set:Nx \l_@@_internal_a_tl
-        {
-          \int_compare:nNnT
-            {
-              \char_value_catcode:n
-                { \exp_last_unbraced:Nf ` \str_head:n {#2} ~ }
-            }
-            = \c_ten { ~ }
-          \exp_after:wN \@@_rescan:w
-          \exp_after:wN \prg_do_nothing:
-          \etex_scantokens:D { #2 #1 }
-        }
-    }
-\group_end:
+\cs_new_protected:Npn \@@_set_rescan:n #1
+  {
+    \int_compare:nNnTF \tex_newlinechar:D < \c_zero
+      { \use_ii:nn }
+      {
+        \exp_after:wN \exp_after:wN \exp_after:wN
+          \@@_set_rescan:NnTF
+            \char_generate:nn { \tex_newlinechar:D } { 12 }
+            {#1}
+      }
+        { \@@_set_rescan_multi:n }
+        { \@@_set_rescan_single:nn { ' } }
+    {#1}
+  }
+\cs_new_protected:Npn \@@_set_rescan:NnTF #1#2
+  { \tl_if_in:nnTF {#2} {#1} }
+\cs_new_protected:Npn \@@_set_rescan_single:nn #1
+  {
+    \int_compare:nNnTF
+      { \char_value_catcode:n { `#1 } / \c_three } = \c_four
+      { \@@_set_rescan_single_aux:nn {#1} }
+      {
+        \int_compare:nNnTF { `#1 } < { `\~ }
+          {
+            \exp_after:wN \exp_after:wN \exp_after:wN
+              \@@_set_rescan_single:nn
+                \exp_after:wN \exp_after:wN \exp_after:wN
+                  { \char_generate:nn { `#1 + 1 } { 12 } }
+          }
+          { \@@_set_rescan_single_aux:nn { } }
+      }
+  }
+\cs_new_protected:Npn \@@_set_rescan_single_aux:nn #1#2
+  {
+    \tex_endlinechar:D \c_minus_one
+    \use:x
+      {
+        \exp_not:N \use:n
+          {
+            \exp_not:n { \cs_set:Npn \@@_rescan:w ##1 }
+            \exp_after:wN \@@_rescan:w
+            \exp_after:wN \prg_do_nothing:
+            \etex_scantokens:D {#1}
+          }
+        \c_@@_rescan_marker_tl
+      }
+      { \exp_not:o {##1} }
+    \tl_set:Nx \l_@@_internal_a_tl
+      {
+        \int_compare:nNnT
+          {
+            \char_value_catcode:n
+              { \exp_last_unbraced:Nf ` \str_head:n {#2} ~ }
+          }
+          = \c_ten { ~ }
+        \exp_after:wN \@@_rescan:w
+        \exp_after:wN \prg_do_nothing:
+        \etex_scantokens:D { #2 #1 }
+      }
+  }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
