--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-%% File: l3file.dtx Copyright (C) 1990-2015 The LaTeX3 Project
+%% File: l3file.dtx Copyright (C) 1990-2016 The LaTeX3 Project
 %%
 %% It may be distributed and/or modified under the conditions of the
 %% LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -1549,15 +1549,9 @@
 % \end{macro}
 %
 % \begin{macro}{\c_catcode_other_space_tl}
-%   Lowercase a character with category code $12$ to produce an
-%   \enquote{other} space. We can do everything within the group,
-%   because \cs{tl_const:Nn} defines its argument globally.
+%   Create a space with category code $12$: an \enquote{other} space.
 %    \begin{macrocode}
-\group_begin:
-  \char_set_catcode_other:N \*
-  \char_set_lccode:nn {`\*} {`\ }
-  \tex_lowercase:D { \tl_const:Nn \c_catcode_other_space_tl { * } }
-\group_end:
+\tl_const:Nx \c_catcode_other_space_tl { \char_generate:nn { `\  } { 12 } }
 %    \end{macrocode}
 % \end{macro}
 %
