--- a/l3trial/l3kernel-extras/l3kernel-extras.dtx
+++ b/l3trial/l3kernel-extras/l3kernel-extras.dtx
@@ -1,6 +1,6 @@
 % \iffalse
 %
-%% File l3kernel-extras.dtx (C) Copyright 2012,2015 The LaTeX3 Project
+%% File l3kernel-extras.dtx (C) Copyright 2012,2015,2016 The LaTeX3 Project
 %%
 %% It may be distributed and/or modified under the conditions of the
 %% LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -1007,20 +1007,12 @@
 \tl_new:N \l__char_lowercase_tl
 \tl_new:N \l__char_uppercase_tl
 \cs_new_protected:Npn \char_show:N #1 { \char_show:n { `#1 } }
-\group_begin:
-  \char_set_catcode_other:n { 0 }
-  \cs_new_protected:Npn \char_show:n #1
-    {
-      \int_set:Nn \l__char_code_int {#1}
-      \group_begin:
-      \char_set_lccode:nn \c_zero {#1}
-      \tex_lowercase:D
-        {
-          \group_end:
-          \__char_show:N ^^@
-        }
-    }
-\group_end:
+\cs_new_protected:Npn \char_show:n #1
+  {
+    \int_set:Nn \l__char_code_int {#1}
+    \exp_after:wN \exp_after:wN \exp_after:wN \__char_show:N 
+      \char_generate:nn { \l__char_code_int } { 12 }
+  }
 \cs_new_protected:Npn \__char_show:N #1
   {
     \group_begin:
