Slightly simplify code which defines expandable errors
I exchanged args of the tmp function so as to use
\exp_args:Ncx (:Nxc doesn't exist).  Also moved the
group to surround the whole code: all defs are global.

--- a/l3kernel/l3msg.dtx
+++ b/l3kernel/l3msg.dtx
@@ -2021,7 +2021,6 @@
 \group_begin:
 \cs_set_protected:Npn \@@_tmp:w #1#2
   {
-    \group_end:
     \cs_new:Npn \@@_expandable_error:n ##1
       {
         \exp:w
@@ -2029,13 +2028,13 @@
         \exp_after:wN \@@_expandable_error:w
         \exp_after:wN \exp_after:wN
         \exp_after:wN \exp_end:
-        \use:n { #2 #1 ##1 } #1
+        \use:n { #1 #2 ##1 } #2
       }
-    \cs_new:Npn \@@_expandable_error:w ##1 #1 ##2 #1 {##1}
+    \cs_new:Npn \@@_expandable_error:w ##1 #2 ##2 #2 {##1}
   }
-\exp_args:NNnx \exp_args:Nx \@@_tmp:w
+\exp_args:Ncx \@@_tmp:w { LaTeX3~error: }
   { \char_generate:nn { `\  } { 7 } }
-  { \exp_not:c { LaTeX3~error: } }
+\group_end:
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
