Various typos [ci skip]

--- a/l3kernel/l3fp.dtx
+++ b/l3kernel/l3fp.dtx
@@ -314,7 +314,7 @@
 %   The leading \meta{digit} is non-zero except in the case of $\pm 0$.
 %   The values $\pm\infty$ and~\nan{} trigger an \enquote{invalid
 %   operation} exception. Normal category codes apply: thus the |e| is
-%   category code~$11 (a letter).
+%   category code~$11$ (a letter).
 % \end{function}
 %
 % \begin{function}[EXP, updated = 2016-03-22]
