--- a/l3kernel/l3luatex.dtx
+++ b/l3kernel/l3luatex.dtx
@@ -341,7 +341,7 @@ end
 % if we want to develop a richer loader we may want to take advantage of that
 % (which also applies to the simple shaper in the related \texttt{fonts.lua}
 % file).
-%    \end{macrocode}
+%    \begin{macrocode}
 local fontloader = require("fontloader.lua")
 %    \end{macrocode}
 % That done, register a callback which at present simply passes everything
