--- a/l3kernel/l3token.dtx
+++ b/l3kernel/l3token.dtx
@@ -1282,7 +1282,7 @@
 % \end{macro}
 %
 % \begin{macro}[EXP]{\char_generate:nn}
-% \begin{macro}[EXP, int]{\char_generate:nn}
+% \begin{macro}[EXP, int]{\__char_generate:nn}
 % \begin{macro}[EXP, aux]{\@@_generate_aux:nn}
 % \begin{macro}[EXP, aux]{\@@_generate_aux:nnw}
 % \begin{variable}{\l_@@_tmp_tl}
@@ -1474,9 +1474,9 @@
 \group_end:
 %    \end{macrocode}
 % \end{macro}
+% \end{variable}
+% \end{variable}
 % \end{macro}
-% \end{variable}
-% \end{variable}
 % \end{macro}
 % \end{macro}
 % \end{macro}
