Back out one use of \char_generate:nn
Probably this needs fixing at the 'source' but for the
present deal with the urgent issue.

--- a/l3packages/xparse/xparse.dtx
+++ b/l3packages/xparse/xparse.dtx
@@ -2008,8 +2008,13 @@
 %    \begin{macrocode}
         \token_if_eq_catcode:NNTF + #1
           {
-            \exp_after:wN \exp_after:wN \exp_after:wN
-              \l_@@_fn_tl \char_generate:nn { `#1 } { 11 }
+            \group_begin:
+              \char_set_lccode:nn { `A } { `#1 }
+              \tex_lowercase:D
+                {
+                  \group_end:
+                  \l_@@_fn_tl A
+                }
           }
           {
             \exp_after:wN \l_@@_fn_tl
