--- a/l3kernel/l3drivers.dtx
+++ b/l3kernel/l3drivers.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-%% File: l3drivers.dtx Copyright(C) 2011-2015 The LaTeX3 Project
+%% File: l3drivers.dtx Copyright(C) 2011-2016 The LaTeX3 Project
 %%
 %% It may be distributed and/or modified under the conditions of the
 %% LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -498,7 +498,8 @@
 %
 % \begin{variable}{\l_@@_current_color_tl}
 %   The current color is needed by all of the engines, but the way this
-%   is stored varies.
+%   is stored varies. In package mode if the \pkg{color} package is loaded
+%   simply pick up what it is using.
 %    \begin{macrocode}
 \tl_new:N \l_@@_current_color_tl
 %<*dvipdfmx|dvips|xdvipdfmx>
@@ -507,6 +508,14 @@
 %<*pdfmode>
 \tl_set:Nn \l_@@_current_color_tl { 0~g~0~G }
 %</pdfmode>
+%<*package>
+\AtBeginDocument
+  {
+    \@ifpackageloaded { color }
+      { \tl_set:Nn \l_@@_current_color_tl { \current@color } }
+      { }
+  }
+%</package>
 %    \end{macrocode}
 % \end{variable}
 %
