Drop protected status for end-of-environment code

--- a/l3packages/xparse/xparse.dtx
+++ b/l3packages/xparse/xparse.dtx
@@ -1088,17 +1088,17 @@
   {
     \@@_declare_cmd_internal:cnx { environment~ #1 } {#2}
       {
-        \cs_set_protected_nopar:Npx \exp_not:c { environment~ #1 ~end~aux }
+        \cs_set_nopar:Npx \exp_not:c { environment~ #1 ~end~aux }
           {
-            \exp_not:c { environment~ #1~end~aux~ }
+            \exp_not:N \exp_not:N \exp_not:c { environment~ #1~end~aux~ }
             \exp_not:n { \tl_tail:N \l_@@_args_tl }
           }
         \exp_not:n {#3}
       }
-    \cs_set_protected_nopar:cpx { environment~ #1 ~end }
+    \cs_set_nopar:cpx { environment~ #1 ~end }
       { \exp_not:c { environment~ #1 ~end~aux } }
     \cs_generate_from_arg_count:cNnn
-      { environment~ #1 ~end~aux~ } \cs_set_protected:Npn
+      { environment~ #1 ~end~aux~ } \cs_set:Npn
       \l_@@_current_arg_int {#4}
 %<*package>
     \cs_set_eq:cc {#1}       { environment~ #1 }
