Upload xbox lrbox definition following xparse change
There was an assumption of \protected here which is not
longer valid.

--- a/l3trial/xbox/xbox.dtx
+++ b/l3trial/xbox/xbox.dtx
@@ -1019,7 +1019,7 @@
       {
         \group_end:
         \hcoffin_set:Nw #1
-          \cs_set_protected_nopar:cpn { environment~lrbox~end }
+          \cs_set_nopar:cpn { environment~lrbox~end }
             {
               \tex_unskip:D
               \hcoffin_set_end:
@@ -1032,7 +1032,7 @@
 %<*package>
           \tl_set:Nn \exp_not:N \@currenvir { \@currenvir }
           \tl_set:Nn \exp_not:N \@currenvline { \on@line }
-          \cs_set_eq:Nc \endlrbox { environment~lrbox~end }
+          \cs_set_eq:Nc \exp_not:N \endlrbox { environment~lrbox~end }
           \exp_not:N \@endpefalse
 %</package>
       }
