Add basic dvisvgm support
At present this covers color/rotation/scaling but not clipping:
the latter is trickier.

--- a/l3kernel/expl3.dtx
+++ b/l3kernel/expl3.dtx
@@ -1364,6 +1364,24 @@
               }
           }
       },
+    driver / dvisvgm .code:n =
+      {
+        \tl_set:Nn \l__expl_driver_tl { dvisvgm }
+        \sys_if_engine_xetex:TF
+          {
+            \__msg_kernel_error:nnnn { expl } { wrong-driver }
+              { dvips } { xdvipdfmx }
+            \tl_set:Nn \l__expl_driver_tl { xdvipdfmx }
+          }
+          {
+            \sys_if_output_pdf:T
+              {
+                \__msg_kernel_error:nnnn { expl } { wrong-driver }
+                  { dvips } { pdfmode }
+                \tl_set:Nn \l__expl_driver_tl { pdfmode }
+              }
+          }
+      },
     driver / latex2e .code:n =
       { \tl_set:Nn \l__expl_driver_tl { latex2e } },
     driver / pdfmode .code:n =
