--- a/l3kernel/l3drivers.dtx
+++ b/l3kernel/l3drivers.dtx
@@ -175,6 +175,10 @@
   {l3dvips.def}{\ExplFileDate}{\ExplFileVersion}
   {L3 Experimental driver: dvips}
 %</dvips>
+%<*dvisvgm>
+  {l3dvisvgm.def}{\ExplFileDate}{\ExplFileVersion}
+  {L3 Experimental driver: dvisvgm}
+%</dvisvgm>
 %<*pdfmode>
   {l3pdfmode.def}{\ExplFileDate}{\ExplFileVersion}
   {L3 Experimental driver: PDF mode}
@@ -230,7 +234,7 @@
 % \subsection{Driver utility functions}
 %
 % \begin{macro}{\@@_state_save:, \@@_state_restore:}
-%   All of the drivers have a stack for saving the graphic state. These
+%   Almost all of the drivers have a stack for saving the graphic state. These
 %   have slightly different interfaces. For both \texttt{dvips} and
 %   \texttt{(x)dvipdfmx} this is done using an appropriate special. Note
 %   that here and later, the \texttt{dvipdfmx} documentation does not cover
@@ -239,7 +243,9 @@
 %   in  direct PDF output mode there is a dedicated primitive. \LuaTeX{} is
 %   almost the same but with newer versions there is a compatibly step
 %    \begin{macrocode}
+%<*dvips|dvipdfmx|pdfmode|xdvipdfmx>
 \cs_new_protected_nopar:Npx \@@_state_save:
+%</dvips|dvipdfmx|pdfmode|xdvipdfmx>
 %<*dvips>
   { \tex_special:D { ps:gsave } }
 %</dvips>
@@ -253,7 +259,9 @@
       { \pdftex_pdfsave:D }
   }
 %</pdfmode>
+%<*dvips|dvipdfmx|pdfmode|xdvipdfmx>
 \cs_new_protected_nopar:Npx \@@_state_restore:
+%</dvips|dvipdfmx|pdfmode|xdvipdfmx>
 %<*dvips>
   { \tex_special:D { ps:grestore } }
 %</dvips>
@@ -278,7 +286,9 @@
 %   be driver-specific. Note that these functions set the transformation matrix
 %   to the current position.
 %    \begin{macrocode}
+%<*dvips|dvipdfmx|pdfmode|xdvipdfmx>
 \cs_new_protected:Npx \@@_literal:n #1
+%</dvips|dvipdfmx|pdfmode|xdvipdfmx>
 %<*dvipdfmx|xdvipdfmx>
   { \tex_special:D { pdf:literal~ #1 } }
 %</dvipdfmx|xdvipdfmx>
@@ -312,6 +322,27 @@
 %    \end{macrocode}
 % \end{macro}
 %
+% \begin{macro}[int]{\@@_transform:n}
+% \begin{macro}[int]{\@@_transform_end:}
+%   The \texttt{dvisvgm} driver needs to generate \textsc{svg} code, which
+%   works somewhat differently from the \textsc{EPS} heritage visible in all
+%   of the other drivers. In particular, it doesn't use a save/restore stack
+%   for the graphics state so instead needs functions to start/end a
+%   transformation. (At some future stage this might be generalised using a
+%   \cs{@@_literal_direct:n} or similar function as the approach here also does
+%   not expect the graphic state to be aligned \enquote{here}.)
+%    \begin{macrocode}
+%<*dvisvgm>
+\cs_new_protected:Npn \@@_transform:n #1
+  { \tex_special:D { dvisvgm:raw~<g~transform=" #1 "> } }
+\cs_new_protected_nopar:Npn \@@_transform_end:
+  { \tex_special:D { dvisvgm:raw~</g> } }
+%</dvisvgm>
+%    \end{macrocode}
+% \end{macro}
+% \end{macro}
+
+%
 % \begin{macro}[int, EXP]{\@@_absolute_lengths:n}
 %   The \texttt{dvips} driver scales all absolute dimensions based
 %   on the output resolution selected and any \TeX{} magnification. Thus
@@ -338,8 +369,9 @@
 %   With \texttt{(x)dvipdfmx} the matrix also has to include a translation
 %   part: that is always zero and so is built in here.
 %    \begin{macrocode}
-%<*!dvips>
+%<*dvipdfmx|pdfmode|xdvipdfmx>
 \cs_new_protected:Npx \@@_matrix:n #1
+%</dvipdfmx|pdfmode|xdvipdfmx>
 %<*pdfmode>
   {
     \cs_if_exist:NTF \luatex_pdfextension:D
@@ -351,7 +383,6 @@
 %<*dvipdfmx|xdvipdfmx>
   { \@@_literal:n { #1 \c_space_tl 0~0~cm } }
 %</dvipdfmx|xdvipdfmx>
-%</!dvips>
 %    \end{macrocode}
 % \end{macro}
 %
@@ -369,7 +400,9 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_box_use_clip:N #1
   {
+%<*dvips|dvipdfmx|pdfmode|xdvipdfmx>
     \@@_state_save:
+%</dvips|dvipdfmx|pdfmode|xdvipdfmx>
 %<*dvips>
     \@@_literal:n
       {
@@ -398,7 +431,9 @@
 %   and then insert the necessary width.
 %    \begin{macrocode}
     \hbox_overlap_right:n { \box_use:N #1 }
+%<*dvips|dvipdfmx|pdfmode|xdvipdfmx>
     \@@_state_restore:
+%</dvips|dvipdfmx|pdfmode|xdvipdfmx>
     \skip_horizontal:n { \box_wd:N #1 }
   }
 %    \end{macrocode}
@@ -424,7 +459,9 @@
 %    \begin{macrocode}
 \cs_new_protected_nopar:Npn \@@_box_rotate_begin:
   {
+%<*dvips|dvipdfmx|pdfmode|xdvipdfmx>
     \@@_state_save:
+%</dvips|dvipdfmx|pdfmode|xdvipdfmx>
 %<*dvipdfmx|pdfmode|xdvipdfmx>
     \box_set_wd:Nn \l__box_internal_box \c_zero_dim
     \fp_set:Nn \l__box_cos_fp { round ( \l__box_cos_fp , 5 ) }
@@ -445,8 +482,10 @@
         \fp_use:N \l__box_cos_fp
       }
 %</dvipdfmx|pdfmode|xdvipdfmx>
-%<*dvips>
+%<*dvips|dvisvgm>
     \fp_set:Nn \l__box_angle_fp { round ( \l__box_angle_fp , 5 ) }
+%</dvips|dvisvgm>
+%<*dvips>
     \@@_literal:n
       {
         \fp_compare:nNnTF \l__box_angle_fp = \c_zero_fp
@@ -456,11 +495,28 @@
         rotate
       }
 %</dvips>
+%    \end{macrocode}
+%   For \texttt{dvisvgm} the center of rotation can be set to the current
+%   point using the |{?x}| and |{?y}| commands as the optional arguments of
+%   the low-level operation.
+%    \begin{macrocode}
+%<*dvisvgm>
+    \@@_transform:n
+      {
+        rotate
+          ( \fp_eval:n { -\l__box_angle_fp } , ~ { ?x } , ~ { ?y } )
+      }
+%</dvisvgm>
   }
 %    \end{macrocode}
 %   The end of a rotation means tidying up the output grouping.
 %    \begin{macrocode}
+%<*dvips|dvipdfmx|pdfmode|xdvipdfmx>
 \cs_new_eq:NN \@@_box_rotate_end: \@@_state_restore:
+%</dvips|dvipdfmx|pdfmode|xdvipdfmx>
+%<*dvisvgm>
+\cs_new_eq:NN \@@_box_rotate_end: \@@_transform_end:
+%</dvisvgm>
 %    \end{macrocode}
 % \end{macro}
 %
@@ -470,7 +526,9 @@
 %    \begin{macrocode}
 \cs_new_protected_nopar:Npn \@@_box_scale_begin:
   {
+%<*dvips|dvipdfmx|pdfmode|xdvipdfmx>
     \@@_state_save:
+%</dvips|dvipdfmx|pdfmode|xdvipdfmx>
     \fp_set:Nn \l__box_scale_x_fp { round ( \l__box_scale_x_fp , 5 ) }
     \fp_set:Nn \l__box_scale_y_fp { round ( \l__box_scale_y_fp , 5 ) }
 %<*dvips>
@@ -489,8 +547,31 @@
         \fp_use:N \l__box_scale_y_fp
       }
 %</dvipdfmx|pdfmode|xdvipdfmx>
+%    \end{macrocode}
+%   For \texttt{dvisvgm}, in contrast to rotation there's no convenient
+%   shortcut to get the current position in the right place. We therefore have
+%   to manipulate the current point such that everything lines up.
+%    \begin{macrocode}
+%<*dvisvgm>
+    \@@_transform:n
+      {
+        translate ( { ?x } , { ?y } )
+        scale
+          (
+            \fp_eval:n { -\l__box_scale_x_fp } ,
+            \fp_eval:n { -\l__box_scale_y_fp } 
+          )
+        translate ( { ?x } , { ?y } )
+        scale ( -1 )
+      }
+%</dvisvgm>
   }
+%<*dvips|dvipdfmx|pdfmode|xdvipdfmx>
 \cs_new_eq:NN \@@_box_scale_end: \@@_state_restore:
+%</dvips|dvipdfmx|pdfmode|xdvipdfmx>
+%<*dvisvgm>
+\cs_new_eq:NN \@@_box_scale_end: \@@_transform_end:
+%</dvisvgm>
 %    \end{macrocode}
 % \end{macro}
 %
@@ -536,12 +617,12 @@
 %   the current group.
 %    \begin{macrocode}
 \cs_new_protected_nopar:Npx \@@_color_ensure_current:
-%<*dvipdfmx|dvips|xdvipdfmx>
+%<*dvipdfmx|dvips|dvisvgm|xdvipdfmx>
   {
     \tex_special:D { color~push~\exp_not:N \l_@@_current_color_tl }
     \group_insert_after:N \exp_not:N \@@_color_reset:
   }
-%</dvipdfmx|dvips|xdvipdfmx>
+%</dvipdfmx|dvips|dvisvgm|xdvipdfmx>
 %<*pdfmode>
   {
     \cs_if_exist:NTF \luatex_pdfextension:D
@@ -553,9 +634,9 @@
   }
 %</pdfmode>
 \cs_new_protected_nopar:Npx \@@_color_reset:
-%<*dvipdfmx|dvips|xdvipdfmx>
+%<*dvipdfmx|dvips|dvisvgm|xdvipdfmx>
   { \tex_special:D { color~pop } }
-%</dvipdfmx|dvips|xdvipdfmx>
+%</dvipdfmx|dvips|dvisvgm|xdvipdfmx>
 %<*pdfmode>
   {
     \cs_if_exist:NTF \luatex_pdfextension:D
